# rust-serverless-framework

./: .env.example  .gitignore  Cargo.toml  Makefile  package.json  serverless.yml
src/: main.rs
