[package]
name = "serverless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.7"
tokio = { version = "1.25.0", features = ["full"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
